# python-library-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Jenkinsfile  README.md  build.sh  cookiecutter.json  deploy.sh
.github/: CODEOWNERS  pull_request_template.md
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Jenkinsfile  MANIFEST.in  README.md  build.sh  deploy.sh  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: CODEOWNERS
{{ cookiecutter.repo_name }}/src/_src/: __init__.py  _version.pyi
{{ cookiecutter.repo_name }}/test/: conftest.py
{{ cookiecutter.repo_name }}/test/unit/: test_version.py
